# Game-Server-List

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-image.yml
src/: lib.rs  main.rs  ws_server.rs
