[package]
name = "godot-server-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde", "v4", "v7"] }
tokio = { version = "1.22", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.4", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
